# IAGA-Sentinel

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATA_HANDLING.md  Dockerfile  ENTERPRISE.md  IAGA_SENTINEL_1.0.md  IAGA_SENTINEL_1.1.md  IAGA_SENTINEL_1.2.md  IAGA_SENTINEL_1.3.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  about.hbs  about.toml  docker-compose.yml  iaga-sentinel.config.json
crates/iaga-sentinel-apl/: Cargo.toml
crates/iaga-sentinel-apl/examples/: no_pii_egress.apl  sample_context.json
crates/iaga-sentinel-apl/src/: ast.rs  errors.rs  eval.rs  lexer.rs  lib.rs  parser.rs  secrets.rs  types.rs  validator.rs  wasm.rs
crates/iaga-sentinel-apl/tests/: differential.rs  eval.rs  parse.rs
crates/iaga-sentinel-codex/: Cargo.toml
crates/iaga-sentinel-codex/src/: codex_event.rs  exec_stream.rs  execpolicy_format.rs  hook_config.rs  hook_gate.rs  inspect_client.rs  lib.rs  rules_compiler.rs  rules_export.rs  session_ingest.rs
crates/iaga-sentinel-codex/tests/: export_rules_tests.rs  hook_gate_tests.rs
crates/iaga-sentinel-codex/tests/fixtures/: exec_stream_malformed.provisional.jsonl  exec_stream_real_0.138.jsonl  exec_stream_session.provisional.jsonl  posttooluse.provisional.json  pretooluse_mcp_tool.provisional.json  pretooluse_shell_benign.provisional.json  pretooluse_shell_blocked.provisional.json  sample_bundle.apl  sample_bundle.dictum  sample_bundle.golden.rules
crates/iaga-sentinel-core/: Cargo.toml  iaga-sentinel.example.yaml
crates/iaga-sentinel-core/.cargo/: audit.toml
crates/iaga-sentinel-core/examples/: mcp_stdio_client.rs
crates/iaga-sentinel-core/examples/plugins/: README.md  review_hint.wat
crates/iaga-sentinel-core/examples/policies/: strict.apl  strict.dictum
crates/iaga-sentinel-core/fuzz/: Cargo.toml
crates/iaga-sentinel-core/fuzz/fuzz_targets/: fuzz_firewall.rs  fuzz_session_dag.rs  fuzz_taint.rs
crates/iaga-sentinel-core/migrations/postgres/: 0001_initial.sql  0002_indexes.sql  0003_durable_state.sql  0004_cost.sql  0005_api_key_scope.sql
crates/iaga-sentinel-core/migrations/sqlite/: 0001_initial.sql  0002_indexes.sql  0003_durable_state.sql  0004_cost.sql  0005_api_key_scope.sql
crates/iaga-sentinel-core/src/: lib.rs  main.rs  ui_embed.rs
crates/iaga-sentinel-core/src/auth/: api_keys.rs  cache.rs  middleware.rs  mod.rs
crates/iaga-sentinel-core/src/cli/: inspect.rs
crates/iaga-sentinel-core/src/config/: env.rs  load_config.rs  mod.rs
crates/iaga-sentinel-core/src/core/: errors.rs  types.rs
crates/iaga-sentinel-core/src/dashboard/: dashboard.html  index_html.rs  mod.rs
crates/iaga-sentinel-core/src/demo/: scenarios.rs
crates/iaga-sentinel-core/src/events/: bus.rs  mod.rs  sse.rs  webhooks.rs
crates/iaga-sentinel-core/src/mcp_doctor/: mod.rs
crates/iaga-sentinel-core/src/mcp_proxy/: mod.rs  protocol.rs  proxy_server.rs  tool_interceptor.rs
crates/iaga-sentinel-core/src/mcp_server/: server.rs
crates/iaga-sentinel-core/src/modules/: mod.rs
crates/iaga-sentinel-core/src/pipeline/: apl_overlay.rs  cost.rs  dictum_overlay.rs  execute_pipeline.rs  mod.rs  policy_hash.rs  reasoning.rs  receipts.rs
crates/iaga-sentinel-core/src/plugins/: attest.rs  attestation.rs  host.rs  manifest.rs  mod.rs  registry.rs  types.rs
crates/iaga-sentinel-core/src/server/: app_state.rs  create_server.rs  mod.rs
crates/iaga-sentinel-core/src/storage/: migrations.rs  mod.rs  (+3 more)
crates/iaga-sentinel-core/tests/: apl_overlay_secrets.rs  cli_plugin_tests.rs  cost_control_e2e.rs  cost_storage.rs  demo_e2e.rs  det_replay.rs  dictum_overlay_secrets.rs  e2e_http_tests.rs  firewall_corpus.rs  integration_tests.rs  plugin_example_tests.rs  property_tests.rs  unit_tests.rs
crates/iaga-sentinel-cost/: Cargo.toml
crates/iaga-sentinel-cost/src/: lib.rs  pricing.rs  usage.rs
crates/iaga-sentinel-dictum/: Cargo.toml
crates/iaga-sentinel-dictum/examples/: no_pii_egress.dictum
crates/iaga-sentinel-dictum/src/: ast.rs  errors.rs  eval.rs  lexer.rs  lib.rs  parser.rs  secrets.rs  types.rs  validator.rs  wasm.rs
crates/iaga-sentinel-dictum/tests/: differential.rs  eval.rs  parse.rs
crates/iaga-sentinel-integrations/: Cargo.toml
crates/iaga-sentinel-integrations/src/: lib.rs
crates/iaga-sentinel-kernel/: Cargo.toml
crates/iaga-sentinel-kernel/src/: bpf.rs  decision.rs  engine.rs  errors.rs  lib.rs  userspace.rs
crates/iaga-sentinel-kernel/tests/: userspace.rs
crates/iaga-sentinel-mcp/: Cargo.toml
crates/iaga-sentinel-mcp/src/: lib.rs
crates/iaga-sentinel-mcp/tests/: live.rs
crates/iaga-sentinel-reasoning/: Cargo.toml  README.md
crates/iaga-sentinel-reasoning/src/: digest.rs  engine.rs  errors.rs  evidence.rs  lib.rs  tract_engine.rs
crates/iaga-sentinel-reasoning/tests/: noop.rs  tract_smoke.rs
crates/iaga-sentinel-receipts/: Cargo.toml
crates/iaga-sentinel-receipts/src/: errors.rs  export.rs  lib.rs  merkle.rs  postgres.rs  receipt.rs  replay.rs  signer.rs  sqlite.rs  store.rs
crates/iaga-sentinel-receipts/tests/: append_integrity.rs  drift_capture.rs  merkle_append.rs  postgres_store.rs  replay.rs  sign_verify.rs  signing_bytes_golden.rs  sqlite_store.rs
crates/iaga-sentinel-verify/: Cargo.toml
crates/iaga-sentinel-verify/examples/: emit_golden_export.rs
crates/iaga-sentinel-verify/src/: lib.rs  main.rs
crates/iaga-sentinel-verify/tests/: cli_smoke.rs  roundtrip.rs
plug-ins/letta-plugin/: README.md  docker-compose.yml  pyproject.toml
plug-ins/letta-plugin/examples/: governed_agent.py
plug-ins/letta-plugin/tests/: conftest.py  test_discrimination.py  test_edge_unit.py  test_evidence.py  test_handler_unit.py  test_live.py  test_resilience.py  test_tools_unit.py
sdks/python/: README.md  iaga_verify.py  pyproject.toml
sdks/python/iaga_sentinel/: __init__.py  client.py  decorator.py  types.py
sdks/python/tests/: conftest.py  test_adapters.py  test_iaga_verify.py  test_langgraph.py  test_llamaindex.py  test_mcp.py  test_ms_agent_framework.py  test_openai_agents.py  test_pydantic_ai.py
(+269 files in other folders)
