# IAGA Sentinel, workspace root
# 1.0 ("Fortezza") shipped M1-M6: workspace split + Receipts + Dictum +
# Reasoning + Kernel scaffold + Dictum live overlay. 1.1 is a
# consolidation release: binary swap, runtime behaviour identical to
# 1.0.0, public docs reconciled to make the OSS↔Enterprise boundary
# unambiguous (see CHANGELOG.md + docs/adr/0010-oss-enterprise-boundary.md).
# Licensed under BUSL-1.1 with Change License: Apache-2.0
# (auto-converts 4 years after each release; see LICENSE +
# docs/adr/0002-open-source-license-and-scope.md).

[workspace]
resolver = "2"
members = [
    "crates/iaga-sentinel-core",
    "crates/iaga-sentinel-receipts",
    "crates/iaga-sentinel-cost",
    "crates/iaga-sentinel-dictum",
    "crates/iaga-sentinel-reasoning",
    "crates/iaga-sentinel-kernel",
    "crates/iaga-sentinel-verify",
    "crates/iaga-sentinel-integrations",
    "crates/iaga-sentinel-mcp",
]

[workspace.package]
version = "1.8.0"
edition = "2021"
# Minimum Supported Rust Version. Floor set by transitive deps in Cargo.lock
# (`home 0.5.12` needs 1.88); bump deliberately, note it in CHANGELOG.md.
rust-version = "1.88"
license = "BUSL-1.1"
repository = "https://github.com/EdoardoBambini/IAGA-Sentinel"
authors = ["Edoardo Bambini"]

# Lint policy shared by every crate (each adds `[lints] workspace = true`).
# Kept deliberately conservative: CI already runs clippy with `-D warnings`,
# this block encodes the non-negotiables so local builds and IDEs see them too.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"

[workspace.dependencies]
# shared deps inherited by crates in the workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"
# crypto primitives for iaga-sentinel-receipts (Ed25519 + SHA-256)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
# database access
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "chrono", "uuid", "macros", "migrate"] }
# Dictum lexer
logos = "0.14"
# WASM runtime: optional plugin engine in core, dev-dep of iaga-sentinel-dictum
# for the tree-walk ↔ WASM differential tests (single workspace version).
wasmtime = "36.0.8"
