[package]
name = "iaga-sentinel-apl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel 1.0 — Agent Policy Language (APL) parser, type validator, and deterministic evaluator"

[lib]
name = "iaga_sentinel_apl"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
