[package]
name = "iaga-sentinel-apl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Agent Policy Language (APL) parser, Hindley-Milner type checker, deterministic evaluator, optional WASM codegen"

[lints]
workspace = true

[lib]
name = "iaga_sentinel_apl"
path = "src/lib.rs"

[features]
default = []
# OSS 1.2, Hindley-Milner type checker + WASM codegen (ADR 0014).
# Default off: the tree-walk evaluator at `eval.rs` remains the
# canonical entrypoint. Enabling this feature adds the `types::infer`
# entrypoint and the `wasm::compile_to_wasm` scaffolding. Enterprise
# AOT-optimized codegen (cranelift opt-levels, JIT tuning, WASI
# side-effect policies) is *not* in OSS, see ENTERPRISE.md.
apl-wasm = ["dep:wasm-encoder"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
wasm-encoder = { version = "0.220", optional = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1.6"
# Differential tests (tests/differential.rs, gated on `apl-wasm`): execute the
# compiled WASM and assert it agrees with the tree-walk evaluator.
wasmtime = { workspace = true }
