[package]
name = "iaga-sentinel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel: EU AI Act conformity evidence layer for AI agents (open build, source available)"

[lib]
name = "iaga_sentinel"
path = "src/lib.rs"

# Primary binary, name preserved from 0.4.0 for backward compat
[[bin]]
name = "iaga-sentinel"
path = "src/main.rs"

# 1.0 short alias, same entry point, official alias going forward
[[bin]]
name = "iaga"
path = "src/main.rs"

[features]
default = ["demo", "sqlite", "receipts", "apl", "reasoning", "kernel"]
demo = []
sqlite = ["sqlx/sqlite", "iaga-sentinel-receipts?/sqlite"]
postgres = ["sqlx/postgres", "iaga-sentinel-receipts?/postgres"]
plugins = ["wasmtime"]
# M2: Ed25519-signed action receipts + deterministic replay.
# Backend currently bound to SQLite; postgres backend exposed via
# iaga-sentinel-receipts/postgres (wired in a follow-up milestone).
receipts = ["dep:iaga-sentinel-receipts"]
# M3: Agent Policy Language (APL) parser + evaluator. When enabled,
# `iaga policy test` can compile and dry-run .apl files.
apl = ["dep:iaga-sentinel-apl"]
# OSS 1.2, forward the apl-wasm feature on iaga-sentinel-apl
# (Hindley-Milner type checker + WASM codegen, ADR 0014). Implies
# `apl`. Default off, the tree-walk evaluator remains canonical.
apl-wasm = ["apl", "iaga-sentinel-apl/apl-wasm"]
# M3.5: Probabilistic Reasoning Plane wiring. `reasoning` adds the
# trait surface and the always-available NoopEngine. `ml` additionally
# pulls in the tract-onnx backend so real ONNX models can be loaded.
reasoning = ["dep:iaga-sentinel-reasoning"]
ml = ["reasoning", "iaga-sentinel-reasoning/ml"]
# M4: Enforcement kernel. `kernel` enables the cross-platform
# UserspaceKernel + the `iaga run` subcommand. `linux-bpf` flips on
# the eBPF/LSM scaffold (Linux-only; the actual loader lands in M4.1).
kernel = ["dep:iaga-sentinel-kernel"]
linux-bpf = ["kernel", "iaga-sentinel-kernel/linux-bpf"]
# OSS 1.2, Sigstore bundle + CycloneDX SBOM offline attestation primitive
# for plugin supply-chain integrity (ADR 0013). Default off, the trust-on-path
# model remains the 1.0/1.1 default. Enterprise hosted marketplace + supply-chain
# SLA + curated threat-intel feed are *not* in OSS; see ENTERPRISE.md.
plugin-attestation = ["plugins", "dep:base64"]
# OSS roadmap primitive: emit each signed receipt as an OpenTelemetry span
# into the in-process telemetry feed (surfaced on /v1/telemetry/spans and
# /v1/telemetry/export). Default off, no new dependency. Implies `receipts`.
otel-receipts = ["receipts"]
# OSS roadmap primitive: Ed25519-signed plugin manifests, verified at
# verify-time against trusted keys, on top of and orthogonal to the
# Sigstore/SBOM attestation. Default off. Implies `receipts` (for the
# signer) and pulls ed25519-dalek for verification.
plugin-manifest-signing = ["receipts", "dep:ed25519-dalek"]
# 1.5 cost-control (ADR 0020): token/cost metering, the receipts + audit cost
# ledger, the /v1/cost API, APL budget enforcement, and the response cache.
# Default OFF, so the default build stays byte-identical to 1.4.0. Pure marker
# feature: iaga-sentinel-cost is a non-optional leaf dependency.
cost-control = []

[dependencies]
# workspace-inherited (shared with future crates)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# canonical cost/usage types (UsageData embedded in receipts; non-optional leaf)
iaga-sentinel-cost = { path = "../iaga-sentinel-cost" }

# crate-specific
axum = { version = "0.8", features = ["default"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "chrono", "uuid", "macros", "migrate"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"
futures-core = "0.3"

# optional features
wasmtime = { version = "36.0.8", optional = true }
iaga-sentinel-receipts = { path = "../iaga-sentinel-receipts", optional = true }
iaga-sentinel-apl = { path = "../iaga-sentinel-apl", optional = true }
iaga-sentinel-reasoning = { path = "../iaga-sentinel-reasoning", optional = true }
iaga-sentinel-kernel = { path = "../iaga-sentinel-kernel", optional = true }
base64 = { version = "0.22", optional = true }
ed25519-dalek = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.6"
tokio = { version = "1", features = ["full", "test-util"] }
wat = "1"
tempfile = "3"
