[package]
name = "iaga-sentinel-dictum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Dictum parser, Hindley-Milner type checker, deterministic evaluator, optional WASM codegen"

[lints]
workspace = true

[lib]
name = "iaga_sentinel_dictum"
path = "src/lib.rs"

[features]
default = []
# OSS 1.2, Hindley-Milner type checker + WASM codegen (ADR 0014).
# Default off: the tree-walk evaluator at `eval.rs` is the single CANONICAL
# executor and the only one a governed verdict/receipt goes through. Enabling
# this feature adds the `types::infer` entrypoint and the
# `wasm::compile_to_wasm` scaffolding, which is an experimental NON-CANONICAL
# codegen (i32-truncated integers, bitwise and/or) and must never be used as
# proof of a verdict (see wasm.rs module docs). A semantically faithful,
# AOT-optimized codegen (i64-correct, cranelift opt-levels, JIT tuning, WASI
# side-effect policies) is *not* in OSS, see ENTERPRISE.md.
dictum-wasm = ["dep:wasm-encoder"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
# `secret_ref()` builtin: a fixed, lookaround-free credential/PII regex set,
# compiled once. Pure (no I/O, clock, or RNG), so the evaluator stays
# deterministic for receipt replay. Versions match iaga-sentinel-core.
regex = "1"
once_cell = "1"
wasm-encoder = { version = "0.220", optional = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1.6"
# Differential tests (tests/differential.rs, gated on `dictum-wasm`): execute the
# compiled WASM and assert it agrees with the tree-walk evaluator.
wasmtime = { workspace = true }
