[package]
name = "iaga-sentinel-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Enforcement kernel: cross-platform userspace launcher + eBPF LSM scaffold (Linux)"

[lints]
workspace = true

[lib]
name = "iaga_sentinel_kernel"
path = "src/lib.rs"

[features]
default = []
# Compiles the eBPF/LSM scaffold (Linux-only). The actual eBPF program
# loader is tracked separately and is not part of the public OSS line.
# This feature wires the cross-platform trait surface so the host can
# choose between userspace and kernel enforcement at construction time.
linux-bpf = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# 1.3.1: parse the optional sensitive-env denylist override file
# (IAGA_SENTINEL_ENV_DENYLIST). Small, well-established config parser.
toml = "0.8"

# Unprivileged process hardening applied to a governed child at spawn
# (setsid, RLIMIT_CORE=0, PR_SET_NO_NEW_PRIVS on Linux). These are standard
# POSIX/Linux process controls, NOT eBPF/LSM kernel enforcement, so they stay
# on the OSS side of the boundary (ADR 0010). Unix-only; Windows uses the
# cross-platform reaping path (kill_on_drop).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
