[package]
name = "iaga-sentinel-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Probabilistic Reasoning Plane (ML evidence producer; pure Rust ONNX backend, opt-in)"

[lib]
name = "iaga_sentinel_reasoning"
path = "src/lib.rs"

[features]
default = []
# Enables the tract-onnx ML backend. Pure Rust, zero native deps,
# CI-friendly. Adds ~5 MB to the binary when active.
ml = ["dep:tract-onnx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Optional: pure-Rust ONNX inference. Pinned to a stable 0.21.x line.
tract-onnx = { version = "0.21", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
