[package]
name = "iaga-sentinel-receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Ed25519-signed action receipts + Merkle append-log + deterministic replay (Signer trait + drift-replay capture)"

[lib]
name = "iaga_sentinel_receipts"
path = "src/lib.rs"

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dependencies]
# workspace-inherited
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
