[package]
name = "iaga-sentinel-receipts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IAGA Sentinel, Ed25519-signed action receipts + Merkle append-log + deterministic replay (Signer trait + drift-replay capture)"

[lints]
workspace = true

[lib]
name = "iaga_sentinel_receipts"
path = "src/lib.rs"

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dependencies]
# workspace-inherited
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
# canonical cost/usage types embedded in ReceiptBody (leaf crate, no cycle)
iaga-sentinel-cost = { path = "../iaga-sentinel-cost" }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
