[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iaga-sentinel"
version = "1.4.0"
description = "IAGA Sentinel Python SDK: signed, replay-verifiable audit evidence for AI agent actions"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.9"
authors = [
    { name = "IAGA", email = "info@iaga.tech" },
]
keywords = ["ai", "agents", "governance", "security", "mcp", "a2a"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
sync = ["requests>=2.28"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/EdoardoBambini/IAGA-Sentinel"
Documentation = "https://github.com/EdoardoBambini/IAGA-Sentinel"

[tool.pytest.ini_options]
markers = [
    "e2e: real end-to-end test that needs the framework library installed (auto-skips when absent)",
]
