[package]
name = "iaga-sentinel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.iaga-sentinel]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_firewall"
path = "fuzz_targets/fuzz_firewall.rs"
doc = false

[[bin]]
name = "fuzz_taint"
path = "fuzz_targets/fuzz_taint.rs"
doc = false

[[bin]]
name = "fuzz_session_dag"
path = "fuzz_targets/fuzz_session_dag.rs"
doc = false
